# cargo-release-repro1

./: Cargo.toml  log.txt
altvup/: Cargo.toml
some_binary/: Cargo.toml
