[workspace]
resolver = "2"

members = ["altvup", "some_binary"]

[workspace.package]
version = "16.2.3-test.15"
rust-version = "1.82.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/xxshady/cargo-release-repro1"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.93"

[workspace.metadata.release]
pre-release-commit-message = "release new version: {{version}} (workspace)"
tag = false
