[package]
name = "cargo-altvup"
version = "0.3.6-repro.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Rust module + alt:V server installer"

[[bin]]
name = "cargo-altvup"

[package.metadata.release]
pre-release-commit-message = "release new version: {{version}} (package)"
tag = false
